# ASCII_Video

./: CMakeLists.txt  Progressbar.h  README.md  Video.h  main.cpp  progressbar.cpp  video.cpp
